fix: All question view error(in progress)