@@ -1,42 +1,28 @@
 package com.web.helpforce.domain.question.service;
 
-import com.web.helpforce.domain.attachment.service.FileStorageService;
-import com.web.helpforce.domain.question.dto.AcceptAnswerRequest;
-import com.web.helpforce.domain.question.dto.AcceptAnswerResponse;
-import com.web.helpforce.domain.question.dto.QuestionCreateRequest;
-import com.web.helpforce.domain.question.dto.QuestionCreateResponse;
-import com.web.helpforce.domain.question.dto.QuestionDeleteResponse;
-import com.web.helpforce.domain.question.dto.QuestionDetailResponse;
-import com.web.helpforce.domain.question.dto.QuestionListPageResponse;
-import com.web.helpforce.domain.question.dto.QuestionListResponse;
-import com.web.helpforce.domain.question.dto.QuestionUpdateRequest;
-import com.web.helpforce.domain.question.dto.QuestionUpdateResponse;
-import com.web.helpforce.domain.question.dto.QuestionViewResponseDto;
 import com.web.helpforce.domain.attachment.entity.Attachment;
+import com.web.helpforce.domain.attachment.repository.AttachmentRepository;
+import com.web.helpforce.domain.attachment.service.FileStorageService;
 import com.web.helpforce.domain.answer.entity.Answer;
+import com.web.helpforce.domain.answer.repository.AnswerLikeRepository;
+import com.web.helpforce.domain.answer.repository.AnswerRepository;
+import com.web.helpforce.domain.question.dto.*;
 import com.web.helpforce.domain.question.entity.Question;
 import com.web.helpforce.domain.question.entity.QuestionTag;
-import com.web.helpforce.domain.tag.entity.Tag;
-import com.web.helpforce.domain.attachment.repository.AttachmentRepository;
+import com.web.helpforce.domain.question.repository.QuestionBookmarkRepository;
 import com.web.helpforce.domain.question.repository.QuestionRepository;
 import com.web.helpforce.domain.question.repository.QuestionTagRepository;
+import com.web.helpforce.domain.tag.entity.Tag;
 import com.web.helpforce.domain.tag.repository.TagRepository;
 import com.web.helpforce.domain.user.entity.User;
-import com.web.helpforce.domain.answer.repository.AnswerRepository;
-import com.web.helpforce.domain.answer.repository.AnswerLikeRepository;
-import com.web.helpforce.domain.question.repository.QuestionBookmarkRepository;
 import com.web.helpforce.domain.user.repository.UserRepository;
 import com.web.helpforce.global.exception.ConflictException;
 import com.web.helpforce.global.exception.ForbiddenException;
 import com.web.helpforce.global.exception.NotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.ArrayList;
@@ -65,59 +51,63 @@ public class QuestionService {
             String sort,
             int page,
             int size,
-            Long currentUserId) {
+            Long currentUserId
+    ) {
+        // 0) page 방어: 명세서는 1부터, PageRequest는 0부터
+        int pageIndex = Math.max(page - 1, 0);
+        int pageSize = Math.max(size, 1);
 
-        // 페이징 및 정렬 설정
         Sort sortOption = getSortOption(sort);
-        Pageable pageable = PageRequest.of(page - 1, size, sortOption);
+        Pageable pageable = PageRequest.of(pageIndex, pageSize, sortOption);
 
-        // 질문 조회 - 검색 + 태그 필터 조합
+        String normalizedKeyword = (keyword == null) ? null : keyword.trim();
+        boolean hasKeyword = normalizedKeyword != null && !normalizedKeyword.isEmpty();
+
+        String normalizedSearchType = (searchType == null || searchType.trim().isEmpty())
+                ? "all"
+                : searchType.trim().toLowerCase();
+
+        // 허용값 방어
+        if (!normalizedSearchType.equals("all")
+                && !normalizedSearchType.equals("title")
+                && !normalizedSearchType.equals("body")) {
+            normalizedSearchType = "all";
+        }
+
         Page<Question> questionPage;
 
-        // 검색어가 있는 경우
-        if (keyword != null && !keyword.trim().isEmpty()) {
-            // 검색 타입이 없으면 기본값 'all'
-            String finalSearchType = (searchType == null || searchType.trim().isEmpty()) ? "all" : searchType.toLowerCase();
-
+        if (hasKeyword) {
             if (tagIds != null && !tagIds.isEmpty()) {
-                // 검색 + 태그 필터
-                questionPage = questionRepository.searchWithTagsAndKeyword(tagIds, finalSearchType, keyword, pageable);
+                questionPage = questionRepository.searchWithTagsAndKeyword(tagIds, normalizedSearchType, normalizedKeyword, pageable);
             } else {
-                // 검색만
-                questionPage = questionRepository.searchByKeyword(finalSearchType, keyword, pageable);
+                questionPage = questionRepository.searchByKeyword(normalizedSearchType, normalizedKeyword, pageable);
             }
         } else {
-            // 검색어가 없는 경우
             if (tagIds != null && !tagIds.isEmpty()) {
-                // 태그 필터만
                 questionPage = questionRepository.findByTagIdsAndIsDeletedFalse(tagIds, pageable);
             } else {
-                // 전체 조회
                 questionPage = questionRepository.findByIsDeletedFalse(pageable);
             }
         }
 
-        // DTO 변환
         List<QuestionListResponse> questions = questionPage.getContent().stream()
-                .map(question -> toQuestionListResponse(question, currentUserId))
+                .map(q -> toQuestionListResponse(q, currentUserId))
                 .collect(Collectors.toList());
 
-        // 페이지네이션 정보
         QuestionListPageResponse.Pagination pagination = QuestionListPageResponse.Pagination.builder()
-                .currentPage(page)
+                .currentPage(page) // 명세서 기준 1-based로 그대로 내려줌
                 .totalPages(questionPage.getTotalPages())
                 .totalItems(questionPage.getTotalElements())
-                .itemsPerPage(size)
+                .itemsPerPage(pageSize)
                 .hasPrevious(questionPage.hasPrevious())
                 .hasNext(questionPage.hasNext())
                 .build();
 
-        // 필터 정보
         QuestionListPageResponse.Filters filters = QuestionListPageResponse.Filters.builder()
                 .tagIds(tagIds)
-                .sort(sort != null ? sort : "latest")
-                .searchType(searchType)
-                .searchKeyword(keyword)
+                .sort((sort == null || sort.isBlank()) ? "latest" : sort)
+                .searchType(hasKeyword ? normalizedSearchType : null)
+                .keyword(hasKeyword ? normalizedKeyword : null)
                 .build();
 
         return QuestionListPageResponse.builder()
@@ -128,17 +118,13 @@ public class QuestionService {
     }
 
     private QuestionListResponse toQuestionListResponse(Question question, Long currentUserId) {
-        // 답변 개수
         long answerCount = answerRepository.countByQuestion_IdAndIsDeletedFalse(question.getId());
 
-        // 북마크 여부
         boolean isBookmarked = false;
         if (currentUserId != null) {
-            isBookmarked = questionBookmarkRepository.existsByQuestion_IdAndUser_Id(
-                    question.getId(), currentUserId);
+            isBookmarked = questionBookmarkRepository.existsByQuestion_IdAndUser_Id(question.getId(), currentUserId);
         }
 
-        // 태그 ID 목록
         List<Long> tagIds = question.getQuestionTags().stream()
                 .map(qt -> qt.getTag().getId())
                 .collect(Collectors.toList());
@@ -161,9 +147,10 @@ public class QuestionService {
     }
 
     private Sort getSortOption(String sort) {
-        if (sort == null || sort.equals("latest")) {
+        if (sort == null || sort.equalsIgnoreCase("latest")) {
             return Sort.by(Sort.Direction.DESC, "createdAt");
-        } else if (sort.equals("views")) {
+        }
+        if (sort.equalsIgnoreCase("views")) {
             return Sort.by(Sort.Direction.DESC, "views");
         }
         return Sort.by(Sort.Direction.DESC, "createdAt");
@@ -171,21 +158,16 @@ public class QuestionService {
 
     @Transactional
     public QuestionCreateResponse createQuestion(QuestionCreateRequest request, Long userId) {
-        // 1. 제목 필수 검증
         if (request.getTitle() == null || request.getTitle().trim().isEmpty()) {
             throw new IllegalArgumentException("제목은 필수 입력 항목입니다.");
         }
-
-        // 2. 내용 길이 검증
         if (request.getBody() == null || request.getBody().length() < 10) {
             throw new IllegalArgumentException("질문 내용은 10자 이상 작성해주세요.");
         }
 
-        // 3. 사용자 조회
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
-        // 4. Question 엔티티 생성
         Question question = Question.builder()
                 .user(user)
                 .title(request.getTitle())
@@ -197,267 +179,207 @@ public class QuestionService {
                 .attachments(new ArrayList<>())
                 .build();
 
-        // 5. 태그 연결
         if (request.getTagIds() != null && !request.getTagIds().isEmpty()) {
             List<Tag> tags = tagRepository.findByIdIn(request.getTagIds());
-
             for (Tag tag : tags) {
-                QuestionTag questionTag = QuestionTag.builder()
+                question.getQuestionTags().add(QuestionTag.builder()
                         .question(question)
                         .tag(tag)
-                        .build();
-                question.getQuestionTags().add(questionTag);
+                        .build());
             }
         }
 
-        // 6. 파일 첨부 처리
-        List<QuestionCreateResponse.AttachmentDto> attachmentDtos = new ArrayList<>();
+        // 파일 첨부
         if (request.getFiles() != null && !request.getFiles().isEmpty()) {
-            System.out.println("=== 파일 개수: " + request.getFiles().size());
             for (MultipartFile file : request.getFiles()) {
-                System.out.println("=== 파일 처리: " + file.getOriginalFilename() + ", isEmpty: " + file.isEmpty());
-                if (!file.isEmpty()) {
-                    // 파일 저장
-                    String fileUrl = fileStorageService.storeFile(file);
-                    System.out.println("=== 파일 URL: " + fileUrl);
+                if (file == null || file.isEmpty()) continue;
 
-                    // Attachment 엔티티 생성
-                    Attachment attachment = Attachment.builder()
-                            .question(question)
-                            .fileUrl(fileUrl)
-                            .mimeType(file.getContentType())
-                            .build();
+                String fileUrl = fileStorageService.storeFile(file);
 
-                    question.getAttachments().add(attachment);
-                    System.out.println("=== Attachment 추가 완료, 현재 개수: " + question.getAttachments().size());
+                Attachment attachment = Attachment.builder()
+                        .question(question)
+                        .fileUrl(fileUrl)
+                        .mimeType(file.getContentType())
+                        .build();
 
-                    // 응답 DTO 추가 (임시 ID, 실제로는 저장 후 ID 할당)
-                    attachmentDtos.add(QuestionCreateResponse.AttachmentDto.of(null, fileUrl));
-                }
+                question.getAttachments().add(attachment);
             }
         }
 
-        // 7. DB 저장 (Question 먼저 저장)
-        System.out.println("=== 저장 전 Attachments 개수: " + question.getAttachments().size());
-        System.out.println("=== 저장 전 QuestionTags 개수: " + question.getQuestionTags().size());
         Question savedQuestion = questionRepository.save(question);
-        System.out.println("=== 저장 후 Attachments 개수: " + savedQuestion.getAttachments().size());
-        System.out.println("=== 저장 후 QuestionTags 개수: " + savedQuestion.getQuestionTags().size());
 
-        // 8. 첨부파일 DTO 생성
-        attachmentDtos.clear();
-        for (Attachment attachment : savedQuestion.getAttachments()) {
-            attachmentDtos.add(QuestionCreateResponse.AttachmentDto.of(
-                    attachment.getId(),
-                    attachment.getFileUrl()
-            ));
-        }
+        List<QuestionCreateResponse.AttachmentDto> attachmentDtos = savedQuestion.getAttachments().stream()
+                .map(a -> QuestionCreateResponse.AttachmentDto.of(a.getId(), a.getFileUrl()))
+                .collect(Collectors.toList());
 
-        // 9. 응답 반환
-        return QuestionCreateResponse.of(
-                savedQuestion.getId(),
-                savedQuestion.getCreatedAt(),
-                attachmentDtos
-        );
+        return QuestionCreateResponse.of(savedQuestion.getId(), savedQuestion.getCreatedAt(), attachmentDtos);
     }
 
     @Transactional
-    public QuestionUpdateResponse updateQuestion(Long questionId, QuestionUpdateRequest request, Long userId) {
-        // 1. 질문 조회
+    public QuestionUpdateResponse updateQuestion(
+            Long questionId,
+            String title,
+            String body,
+            List<Long> tagIds,
+            List<MultipartFile> files,
+            Long userId
+    ) {
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new NotFoundException("질문을 찾을 수 없습니다."));
 
-        // 2. 삭제된 질문인지 확인
         if (question.getIsDeleted()) {
-            throw new NotFoundException("삭제된 질문은 수정할 수 없습니다.");
+            throw new NotFoundException("질문을 찾을 수 없습니다.");
         }
-
-        // 3. 작성자 권한 확인
         if (!question.getUser().getId().equals(userId)) {
             throw new ForbiddenException("자신의 질문만 수정할 수 있습니다.");
         }
 
-        // 4. 제목 검증
-        if (request.getTitle() == null || request.getTitle().trim().isEmpty()) {
-            throw new IllegalArgumentException("제목은 필수 입력 항목입니다.");
-        }
+        // 1) 기본 필드 수정
+        question.setTitle(title);
+        question.setBody(body);
 
-        // 5. 내용 검증
-        if (request.getBody() == null || request.getBody().trim().isEmpty()) {
-            throw new IllegalArgumentException("내용은 필수 입력 항목입니다.");
-        }
+        // 2) 태그 갱신 (Replace)
+        if (tagIds != null) {
+            questionTagRepository.deleteByQuestion_Id(questionId);
 
-        // 6. 질문 정보 수정
-        question.setTitle(request.getTitle());
-        question.setBody(request.getBody());
-
-        // 7. 태그 수정 (기존 태그 완전히 삭제 후 새로 추가)
-        questionTagRepository.deleteByQuestionId(questionId);
-
-        // 변경사항 즉시 반영
-        questionRepository.flush();
-
-        if (request.getTagIds() != null && !request.getTagIds().isEmpty()) {
-            List<Tag> tags = tagRepository.findByIdIn(request.getTagIds());
-
-            for (Tag tag : tags) {
-                QuestionTag questionTag = QuestionTag.builder()
-                        .question(question)
-                        .tag(tag)
-                        .build();
-                questionTagRepository.save(questionTag);
+            if (!tagIds.isEmpty()) {
+                List<Tag> tags = tagRepository.findByIdIn(tagIds);
+                for (Tag tag : tags) {
+                    questionTagRepository.save(QuestionTag.builder()
+                            .question(question)
+                            .tag(tag)
+                            .build());
+                }
             }
         }
 
-        // 8. 질문 다시 조회해서 최신 상태로 응답
-        Question updatedQuestion = questionRepository.findById(questionId)
+        // 3) 파일 갱신 (Replace)
+        boolean hasNewFiles = files != null && files.stream().anyMatch(f -> f != null && !f.isEmpty());
+
+        if (hasNewFiles) {
+            // 기존 첨부파일 DB row 삭제
+            attachmentRepository.deleteByQuestion_Id(questionId);
+            questionRepository.flush(); // 선택(안정용)
+
+            for (MultipartFile file : files) {
+                if (file == null || file.isEmpty()) continue;
+
+                String fileUrl = fileStorageService.storeFile(file);
+
+                Attachment attachment = Attachment.builder()
+                        .question(question)
+                        .fileUrl(fileUrl)
+                        .mimeType(file.getContentType())
+                        .build();
+
+                attachmentRepository.save(attachment);
+            }
+        }
+
+        // 4) 최신 상태 재조회해서 응답 구성
+        Question updated = questionRepository.findById(questionId)
                 .orElseThrow(() -> new NotFoundException("질문을 찾을 수 없습니다."));
 
-        // 9. 응답 생성
-        List<Long> tagIds = updatedQuestion.getQuestionTags().stream()
+        List<Long> updatedTagIds = updated.getQuestionTags().stream()
                 .map(qt -> qt.getTag().getId())
-                .collect(Collectors.toList());
+                .toList();
 
-        return QuestionUpdateResponse.of(
-                updatedQuestion.getTitle(),
-                updatedQuestion.getBody(),
-                tagIds
-        );
+        List<QuestionUpdateResponse.FileDto> fileDtos = attachmentRepository.findByQuestion_Id(questionId).stream()
+                .map(a -> QuestionUpdateResponse.FileDto.builder()
+                        .id(a.getId())
+                        .fileUrl(a.getFileUrl())
+                        .mimeType(a.getMimeType())
+                        .build())
+                .toList();
+
+        return QuestionUpdateResponse.of(updated.getTitle(), updated.getBody(), updatedTagIds, fileDtos);
     }
 
     @Transactional
     public QuestionDeleteResponse deleteQuestion(Long questionId, Long userId) {
-        // 1. 질문 조회
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new NotFoundException("질문을 찾을 수 없습니다."));
 
-        // 2. 이미 삭제된 질문인지 확인
         if (question.getIsDeleted()) {
             throw new NotFoundException("질문을 찾을 수 없습니다.");
         }
-
-        // 3. 작성자 권한 확인
         if (!question.getUser().getId().equals(userId)) {
             throw new ForbiddenException("자신의 질문만 삭제할 수 있습니다.");
         }
-
-        // 4. 채택된 답변이 있는지 확인
         if (question.getAcceptedAnswerId() != null) {
             throw new ConflictException("채택된 답변이 있는 질문은 삭제할 수 없습니다.");
         }
 
-        // 5. Soft Delete 처리
         question.setIsDeleted(true);
         questionRepository.save(question);
 
-        // 6. 응답 반환
         return QuestionDeleteResponse.of("질문이 삭제되었습니다.", true);
     }
 
     @Transactional
     public AcceptAnswerResponse acceptAnswer(Long questionId, AcceptAnswerRequest request, Long userId) {
-        // 1. 질문 조회
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new NotFoundException("질문을 찾을 수 없습니다."));
 
-        // 2. 삭제된 질문인지 확인
         if (question.getIsDeleted()) {
             throw new NotFoundException("질문을 찾을 수 없습니다.");
         }
-
-        // 3. 질문 작성자 권한 확인
         if (!question.getUser().getId().equals(userId)) {
             throw new ForbiddenException("자신의 질문에만 답변을 채택할 수 있습니다.");
         }
-
-        // 4. 이미 채택된 답변이 있는지 확인
         if (question.getAcceptedAnswerId() != null) {
             throw new ConflictException("이미 채택된 답변이 있습니다.");
         }
 
-        // 5. 답변 조회
         Answer answer = answerRepository.findById(request.getAnswerId())
                 .orElseThrow(() -> new NotFoundException("답변을 찾을 수 없습니다."));
 
-        // 6. 답변이 이 질문에 속한 답변인지 확인
         if (!answer.getQuestion().getId().equals(questionId)) {
             throw new IllegalArgumentException("해당 질문의 답변이 아닙니다.");
         }
-
-        // 7. 삭제된 답변인지 확인
         if (answer.getIsDeleted()) {
             throw new NotFoundException("답변을 찾을 수 없습니다.");
         }
 
-        // 8. 답변 채택 처리
         answer.setIsAccepted(true);
         answerRepository.save(answer);
 
-        // 9. 질문에 채택된 답변 ID 저장 및 상태 변경
         question.setAcceptedAnswerId(answer.getId());
         question.setStatus("closed");
         questionRepository.save(question);
 
-        // 10. 응답 반환
-        return AcceptAnswerResponse.of(
-                question.getId(),
-                answer.getId(),
-                "답변이 채택되었습니다."
-        );
+        return AcceptAnswerResponse.of(question.getId(), answer.getId(), "답변이 채택되었습니다.");
     }
 
     public QuestionDetailResponse getQuestionDetail(Long questionId, Long currentUserId) {
-        // 1. 질문 조회
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new NotFoundException("질문을 찾을 수 없습니다."));
 
-        // 2. 삭제된 질문인지 확인
         if (question.getIsDeleted()) {
             throw new NotFoundException("질문을 찾을 수 없습니다.");
         }
 
-        // 3. 질문 정보 생성
-        QuestionDetailResponse.QuestionDto questionDto = buildQuestionDto(question, currentUserId);
-
-        // 4. 답변 목록 조회 (채택 답변 우선, 그 다음 오래된 순)
+        // 부모 답변: 채택 우선 + 나머지 오래된 순(ASC)
         List<Answer> parentAnswers = answerRepository.findByQuestionIdOrderByAcceptedAndCreatedAt(questionId);
 
-        // 5. 답변 DTO 변환 (대댓글 포함)
-        List<QuestionDetailResponse.AnswerDto> answerDtos = parentAnswers.stream()
-                .map(answer -> buildAnswerDto(answer, currentUserId))
+        List<QuestionDetailResponse.AnswerDto> answers = parentAnswers.stream()
+                .map(a -> buildAnswerDtoFlat(a, currentUserId))
                 .collect(Collectors.toList());
 
-        // 6. 첨부파일 목록 조회
-        List<Attachment> attachments = question.getAttachments();
-        List<QuestionDetailResponse.AttachmentDto> attachmentDtos = attachments.stream()
-                .map(this::buildAttachmentDto)
+        List<QuestionDetailResponse.AttachmentDto> attachments = question.getAttachments().stream()
+                .map(this::buildAttachmentDtoFlat)
                 .collect(Collectors.toList());
 
-        // 7. 응답 생성
-        return QuestionDetailResponse.builder()
-                .question(questionDto)
-                .answers(answerDtos)
-                .attachments(attachmentDtos)
-                .build();
-    }
-
-    private QuestionDetailResponse.QuestionDto buildQuestionDto(Question question, Long currentUserId) {
-        // 답변 개수
-        long answerCount = answerRepository.countByQuestion_IdAndIsDeletedFalse(question.getId());
-
-        // 북마크 여부
-        boolean isBookmarked = false;
-        if (currentUserId != null) {
-            isBookmarked = questionBookmarkRepository.existsByQuestion_IdAndUser_Id(
-                    question.getId(), currentUserId);
-        }
-
-        // 태그 ID 목록
         List<Long> tagIds = question.getQuestionTags().stream()
                 .map(qt -> qt.getTag().getId())
                 .collect(Collectors.toList());
 
-        return QuestionDetailResponse.QuestionDto.builder()
+        boolean isBookmarked = false;
+        if (currentUserId != null) {
+            isBookmarked = questionBookmarkRepository.existsByQuestion_IdAndUser_Id(questionId, currentUserId);
+        }
+
+        return QuestionDetailResponse.builder()
                 .id(question.getId())
                 .title(question.getTitle())
                 .body(question.getBody())
@@ -470,27 +392,27 @@ public class QuestionService {
                 .user(QuestionDetailResponse.UserSummary.builder()
                         .id(question.getUser().getId())
                         .nickname(question.getUser().getNickname())
-                        .email(question.getUser().getEmail())
                         .build())
                 .tagIds(tagIds)
-                .answerCount(answerCount)
+                .attachments(attachments)
+                .answers(answers)
                 .build();
     }
 
-    private QuestionDetailResponse.AnswerDto buildAnswerDto(Answer answer, Long currentUserId) {
-        // 좋아요 개수
+    private QuestionDetailResponse.AnswerDto buildAnswerDtoFlat(Answer answer, Long currentUserId) {
         long likeCount = answerLikeRepository.countByAnswer_Id(answer.getId());
 
-        // 좋아요 여부
         boolean isLiked = false;
         if (currentUserId != null) {
             isLiked = answerLikeRepository.existsByAnswer_IdAndUser_Id(answer.getId(), currentUserId);
         }
 
-        // 대댓글 조회
-        List<Answer> replies = answerRepository.findByParentAnswerIdAndIsDeletedFalse(answer.getId());
-        List<QuestionDetailResponse.AnswerDto> replyDtos = replies.stream()
-                .map(reply -> buildAnswerDto(reply, currentUserId)) // 재귀 호출
+        // ✅ 대댓글 오래된 순(ASC) 정렬된 Repository 메서드 필요
+        List<Answer> children = answerRepository
+                .findByParentAnswerIdAndIsDeletedFalseOrderByCreatedAtAsc(answer.getId());
+
+        List<QuestionDetailResponse.AnswerDto> childDtos = children.stream()
+                .map(child -> buildAnswerDtoFlat(child, currentUserId))
                 .collect(Collectors.toList());
 
         return QuestionDetailResponse.AnswerDto.builder()
@@ -498,54 +420,38 @@ public class QuestionService {
                 .body(answer.getBody())
                 .parentAnswerId(answer.getParentAnswerId())
                 .isAccepted(answer.getIsAccepted())
+                .likeCount(likeCount)
+                .isLiked(isLiked)
                 .createdAt(answer.getCreatedAt())
                 .updatedAt(answer.getUpdatedAt())
                 .user(QuestionDetailResponse.UserSummary.builder()
                         .id(answer.getUser().getId())
                         .nickname(answer.getUser().getNickname())
-                        .email(answer.getUser().getEmail())
                         .build())
-                .likeCount(likeCount)
-                .isLiked(isLiked)
-                .replies(replyDtos)
+                .childAnswers(childDtos)
                 .build();
     }
 
-    private QuestionDetailResponse.AttachmentDto buildAttachmentDto(Attachment attachment) {
+    private QuestionDetailResponse.AttachmentDto buildAttachmentDtoFlat(Attachment attachment) {
         return QuestionDetailResponse.AttachmentDto.builder()
                 .id(attachment.getId())
-                .questionId(attachment.getQuestion() != null ? attachment.getQuestion().getId() : null)
-                .answerId(attachment.getAnswer() != null ? attachment.getAnswer().getId() : null)
                 .fileUrl(attachment.getFileUrl())
                 .mimeType(attachment.getMimeType())
                 .build();
     }
 
-    /**
-     * 질문 조회수 증가
-     */
     @Transactional
     public QuestionViewResponseDto incrementViews(Long questionId, Long userId) {
-        System.out.println("=== Question View Increment Debug ===");
-        System.out.println("questionId: " + questionId);
-        System.out.println("userId: " + userId);
-
-        // 1. 질문 존재 확인
         Question question = questionRepository.findById(questionId)
                 .orElseThrow(() -> new NotFoundException("질문을 찾을 수 없습니다."));
 
-        // 2. 삭제된 질문인지 확인
         if (question.getIsDeleted()) {
             throw new NotFoundException("삭제된 질문입니다.");
         }
 
-        // 3. 조회수 증가
         question.setViews(question.getViews() + 1);
         questionRepository.save(question);
 
-        System.out.println("✅ 조회수 증가 완료: " + question.getViews());
-
-        // 4. 응답 DTO 생성
         return QuestionViewResponseDto.builder()
                 .questionId(questionId)
                 .views(question.getViews())
